   not be specified as a string, only as an actual function object, which means
   it is not available for use through configuration files.
 * The I18n filter now extracts messages from gettext functions even inside
   ignored tags (ticket #132).
 * The HTML sanitizer now strips any CSS comments in style attributes, which
   could previously be used to hide malicious property values.
 * Attribute access in template expressions no longer silently ignores
   exceptions other than `AttributeError` raised in the attribute accessor.


Version 0.4.2
http://svn.edgewall.org/repos/genshi/tags/0.4.2/
(Jun 20, from branches/stable/0.4.x)

 * The `doctype` parameter of the markup serializers now also accepts the "name"
   of the doctype as string, in addition to the `(name, pubid, sysid)` tuple.
 * The I18n filter was not replacing the original attributes with the
   translation, but instead adding a second attribute with the same name.
 * `TextTemplate` can now handle unicode source (ticket #125).
 * A `<?python ?>` processing instruction containing trailing whitespace no
   longer causes a syntax error (ticket #127).
 * The I18n filter now skips the content of elements that have an `xml:lang`
   attribute with a fixed string value. Basically, `xml:lang` can now be used
   as a flag to mark specific sections as not needing localization.
 * Added plugin for message extraction via Babel (http://babel.edgewall.org/).


Version 0.4.1
http://svn.edgewall.org/repos/genshi/tags/0.4.1/
(May 21 2007, from branches/stable/0.4.x)

 * Fix incorrect reference to translation function in the I18N filter.
 * The `ET()` function now correctly handles attributes with a namespace.
 * XML declarations are now processed internally, as well as written to the
   output when XML serialization is used (ticket #111).
 * Added the functions `encode()` and `get_serializer()` to the `genshi.output`
   module, which provide a lower-level API to the functionality previously only